Fix: Comments and likes alignment fixed

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -1,3 +1,12 @@
 .modal-title {
   display: inline-block;
 }
+
+// Material icons
+.material-icons {
+  cursor: pointer;
+
+  &:hover {
+    color: $facebook-blue;
+  }
+}
